--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url = jdbc:postgresql://localhost:5432/employee_management
 spring.datasource.name=employee_management
 spring.datasource.username = postgres
 spring.datasource.password = arc123
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
